--- a/videorecommendationservice/src/main/resources/application.properties
+++ b/videorecommendationservice/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.application.name=videorecommendationservice
+server.port=8081
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
+spring.datasource.url=jdbc:h2:~/recommendationdb;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.profiles.active=production
