--- a/videoservice/src/main/resources/application.properties
+++ b/videoservice/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=videoservice
 server.port=8091
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+recommendationservice.url=http://localhost:8081/recommendations/
 
 spring.datasource.url=jdbc:h2:~/videodb;AUTO_SERVER=TRUE;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
